Rewritten to use ADecl and DFunc instead of Function